[package]
name = "rojo-script"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5", features = ["derive"] }
# darklua = { version = "0.13.0" }
rbx_binary = "0.7.7"
rbx_dom_weak = "2.9.0"
rbx_xml = "0.13.5"
