[package]
name = "azalea"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5", features = ["derive"] }
rbx_binary = "0.7.7"
rbx_dom_weak = "2.9.0"
rbx_xml = "0.13.5"
stylua = { version = "2.0.2", features = ["luau"] }

zstd = "0.13.2"
base64 = "0.22.1"
darklua = "0.15.0"

# full-moon should be compiled to release optimisations in debug mode due to stack overflows
[profile.dev.package.full_moon]
opt-level = 3

# stylua should be compiled to release optimisations in debug mode due to stack overflows
[profile.dev.package.stylua]
opt-level = 3
